--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,4 +2,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* tailwind css init */
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  transition: 0.2s all linear;
+}
